# coco-hol-trs

./: Parser.hs  TODO.md  TRS.hs  changed_problems.txt  dhp_test.ari  flaging_compare.txt  flaging_dump.txt  flaging_dump2.txt  main.hs  project.cabal  test.ari  test.trs
core/: HRS.hs  Parser.hs  SMT.hs  TRS.hs  Utils.hs
duplicate_checker/: Main.hs
flaging/: Main.hs
problems/: 1037.ari  1165.ari  1166.ari  426.ari  427.ari  428.ari  429.ari  430.ari  431.ari  432.ari  433.ari  434.ari  435.ari  436.ari  437.ari  438.ari  443.ari  444.ari  445.ari  446.ari  449.ari  452.ari  454.ari  456.ari  457.ari  458.ari  459.ari  460.ari  462.ari  463.ari  464.ari  465.ari  466.ari  467.ari  468.ari  469.ari  470.ari  471.ari  472.ari  473.ari  (+90 more)
proplems/: 1165.ari  428.ari  430.ari  432.ari  433.ari  435.ari  436.ari  437.ari  446.ari  452.ari  454.ari  456.ari  457.ari  458.ari  464.ari  465.ari  466.ari  471.ari  472.ari  474.ari  479.ari  481.ari  483.ari  485.ari  486.ari  500.ari  514.ari  517.ari  518.ari  722.ari  724.ari  725.ari  727.ari  728.ari  742.ari  745.ari  746.ari  748.ari  751.ari  753.ari  (+26 more)
tagging/: Main.hs
tests/one_duplicate/: duplicate.ari  smt_fail.ari  trivial_fail.ari
